--- a/styles/style.css
+++ b/styles/style.css
@@ -442,11 +442,6 @@ a:hover {
     background-color: var(--quaternary-color);
     padding: 7.5rem 0 8.125rem;
 }
-
-.footer-logo {}
-
-.footer-logo a {}
-
 .footer-logo-image {
     margin-right: 1.25rem;
 }
@@ -479,9 +474,6 @@ a:hover {
 .footer-social {
     margin-bottom: 4.625rem;
 }
-
-.footer-social ul {}
-
 .footer-social ul li {
     padding: 2.125rem;
 }
@@ -490,11 +482,6 @@ a:hover {
     font-size: 2.5rem;
     color: white;
 }
-
-.footer-rules {}
-
-.footer-rules ul {}
-
 .footer-rules ul li {
     padding: 1.875rem;
 }
@@ -526,19 +513,15 @@ a:hover {
     .banner .banner-content .banner-image {
         margin: 0;
     }
-
     .gamer-text h1 {
         font-size: var(--xm-size);
     }
-
     .banner-btn .btn-1 {
         margin-right: 1.5rem;
     }
-
     .play-content {
         width: 55%;
     }
-
     .play-image-absolute {
         bottom: -60px;
         transform: translateX(-92px);
@@ -561,21 +544,17 @@ a:hover {
     .header {
         padding: 2.3125rem 0;
     }
-
     .header .container>.row {
         justify-content: space-between;
     }
-
     .header nav .nav,
     .header .container>.row {
         flex-direction: row;
     }
-
     .header nav .nav .nav-item {
         margin-right: 2rem;
         margin-top: 0 !important;
     }
-
     .header .header-logo,
     .header nav .nav .nav-social,
     .banner .banner-content .banner-image,
@@ -583,39 +562,34 @@ a:hover {
     .footer-copyright {
         margin: 0;
     }
-
     .banner {
         background: linear-gradient(#8C57EE0D, #F144AE0D);
     }
-
     .banner .banner-content h2,
     .gamer-text h2,
     .online-header h1,
     .play-text h1 {
         font-size: var(--xl-size);
     }
-
     .banner .banner-content h1 {
         font-size: var(--xxl-size);
     }
-
     .banner .banner-content {
         width: 50%;
     }
-
     .banner .banner-content>.row {
         justify-content: flex-start;
     }
-
+    .gamer {
+        margin-top: 3.4375rem;
+    }
     .container {
         padding: 0;
     }
-
     .banner .container>.row {
         justify-content: flex-start;
         flex-direction: row;
     }
-
     .gamer-text p {
         margin: 1.5rem 0 2rem;
     }
@@ -623,32 +597,25 @@ a:hover {
     .gamer-btn {
         margin-bottom: 1.5rem;
     }
-
     .gamer-text h1 {
         font-size: var(--l-size);
     }
-
     .online {
         margin: 7.5rem 0;
     }
-
     .online-card {
         text-align: start;
         width: 25%;
     }
-
     .play-content {
         width: 50%;
     }
-
     .play-text {
         text-align: right;
     }
-
     .footer-copyright p span {
         display: inline;
     }
-
     .footer-links {
         margin: 2.375rem 0;
     }
@@ -659,49 +626,32 @@ a:hover {
         padding: 2.5rem;
     }
     .online-card-image.card-bg::after {
-        content: '';
-        clear: both;
-        position: absolute;
         top: 4px;
         left: 3px;
         width: 98%;
         height: 97%;
-        background-color: #000000b2;
-        background-blend-mode: multiply;
-        border-radius: 16px;
-        opacity: 0;
-        transition: opacity 200ms ease-in-out;
         transform: none;
     }
 }
-@media screen and (min-width: 380px) {
-
-}
-
 @media screen and (min-width: 1200px) {
     .gamer .gamer-content {
         width: 50%;
     }
-
     .gamer-text {
         width: 32%;
         text-align: right;
         margin: 0;
     }
-
     .play-image-absolute {
         transform: translateX(-117px);
         max-width: 15.938rem;
         max-height: 18.875rem;
     }
-
 }
-
 @media screen and (min-width: 1405px) {
     .online .container>.row {
         gap: 2.375rem;
     }
-
     .online-card {
         text-align: start;
         width: 23%;
